--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 .toolbar {
-  background: purple;
+  background: rebeccapurple;
   height: 56px;
   padding-bottom: -1rem;
 }
@@ -20,15 +20,16 @@
 }
 .toolbar-navigation-items ul {
   list-style: none;
-  margin: 0;
-  padding: 0;
   display: flex;
 }
 .spacer {
   flex: 1;
 }
 .toolbar-navigation-items li {
-  padding: 0 25px;
+  padding-left: 30px;
+  padding-right: 30px;
+  margin-left: 30px;
+  margin-right: 30px;
 }
 .toolbar__navigation-items a {
   color: white;
