--- a/src/components/header/header.css
+++ b/src/components/header/header.css
@@ -1,5 +1,5 @@
 .toolbar {
-  background: rebeccapurple;
+  background: black;
   height: 78px;
 }
 
@@ -10,7 +10,7 @@
 }
 
 .toolbar__logo a:hover {
-  color: white;
+  color: darkgrey;
 }
 .toolbar-navigation-items ul {
   list-style: none;
@@ -18,5 +18,6 @@
 }
 
 .nav-links {
-  background-color: rebeccapurple !important;
+  background-color: black !important;
+  text-decoration: none !important;
 }
