--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,5 +1,31 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  font-family: "Playfair Display SC", serif;
+  color: #333333;
+}
+
+a,
+p,
+li {
+  font-family: "Lato", Arial, sans-serif;
+  color: #4e4e4e;
+  font-size: 1em;
+  line-height: 1.75em;
+}
+a:hover {
+  text-decoration: none !important;
+  color: #333333 !important;
+  -webkit-transition: all 0.2s ease-in-out;
+  -moz-transition: all 0.2s ease-in-out;
+  -ms-transition: all 0.2s ease-in-out;
+  -o-transition: all 0.2s ease-in-out;
+  transition: all 0.2s ease-in-out;
+}
 html {
-  font-family: sans-serif;
   -ms-text-size-adjust: 100%;
   -webkit-text-size-adjust: 100%;
 }
