--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -264,6 +264,9 @@ h1 {
   line-height: 1.1;
 }
 h2 {
+  text-transform: uppercase;
+  margin-bottom: 30px;
+  position: relative;
   margin-left: 0;
   margin-right: 0;
   margin-top: 0;
