changed image url and hosted img within src

--- a/src/components/index.css
+++ b/src/components/index.css
@@ -88,7 +88,7 @@ h2 {
       rgba(0, 0, 0, 0.99),
       rgba(17, 19, 18, 0.877)
     ),
-    url(../../../../../Downloads/Bangalore_large.jpg);
+    url(../images/Bangalore_large.jpg);
   background-size: cover;
   background-position: top;
   position: relative;
