--- a/src/components/Project/Project.css
+++ b/src/components/Project/Project.css
@@ -78,14 +78,13 @@
     background-color: hsla(0, 0%, 97%, .5);
 }
 .projectinfo {
-    position: absolute;
-    margin-top: 0px;
+    display:block;
+    margin-top: 25px;
 }
 
 .projecttitle {
     margin-bottom: 8px;
     margin-left: 0px;
-    font-family: 'Circular Std', sans-serif;
     font-size: 18px;
     line-height: 18px;
     font-weight: 700;
@@ -95,22 +94,18 @@
 
 
 .projectdates {
-    max-width: 320px;
     margin-top: 0px;
     margin-bottom: 16px;
     padding-bottom: 0px;
-    font-family: 'Circular Std', sans-serif;
-    color: rgba(51, 51, 51, .25);
+    color: rgba(51, 51, 51, .50);
     font-size: 14px;
     line-height: 14px;
     font-weight: 500;
 }
 
 .projectdescription {
-    max-width: 320px;
     margin-top: 0px;
     margin-bottom: 8px;
-    font-family: 'Circular Std', sans-serif;
     font-size: 16px;
     line-height: 26px;
     font-weight: 400;
@@ -151,20 +146,22 @@
         text-align: left;
     }
     .projectinfo {
+        display: block;
         justify-content: center;
-        position: static;
         overflow: visible;
-        max-width: 320px;
-        margin: 16px 0px 0px;
+        margin: 20px;
         clear: both;
     }
     .projecttitle {
         margin-bottom: 8px;
+        text-align: center;
     }
     .projectdates {
         font-size: 13px;
+        text-align: center;
     }
     .projectdescription {
+        text-align: center;
         display: block;
         overflow: visible;
         margin-bottom: 0px;
