--- a/src/components/social-home/social-home.css
+++ b/src/components/social-home/social-home.css
@@ -3,8 +3,15 @@
   margin: 0;
   padding: 0;
   text-align: center;
+  animation-name: fadeIn;
+  animation-duration: 3s;
+  animation-timing-function: ease-out;
 }
 
+@keyframes fadeIn {
+  from {opacity:0 }
+  to   {opacity:1 }
+}
 .social-links-container li {
   display: inline;
   color: white;
