changed the styling and content on the index page.

--- a/src/components/layout.css
+++ b/src/components/layout.css
@@ -1,4 +1,4 @@
-h1,
+/* h1,
 h2,
 h3,
 h4,
@@ -663,4 +663,13 @@ pre tt:after {
 a {
   color: black;
   text-decoration: underline;
+} */
+
+main {
+  position: relative;
+  max-width: 56em;
+  background-color: white;
+  padding: 2em;
+  margin: 0 auto;
+  box-sizing: border-box;
 }
